# mlx-lm

./: .gitignore  AGENTS.md  README.md  pyproject.toml
app/: __init__.py
scripts/: bootstrap-venv.sh  chat-default-model.sh  server-default-model.sh
