[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-lm-api"
version = "0.1.0"
description = "Локальный API-сервис для запуска MLX-моделей через mlx-lm на macOS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "mlx-lm>=0.30.7",
    "pydantic-settings",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "httpx",
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
